--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ img{max-width:100%;}
 body{
   font-family: 'Montserrat', sans-serif;
    font-size: 100%;
-   background: deepskyblue;
+   background-image:url('../images/bg.jpg');
        background-size: cover;
 }
 .login-form{
