--- a/sys/css/styles.css
+++ b/sys/css/styles.css
@@ -80,7 +80,7 @@ a:focus {
 }
 
 .color-green {
-	color: #3CB371
+	color: darkgray;
 }
 
 .color-red {
@@ -90,7 +90,9 @@ a:focus {
 .color-blue {
 	color: #40AAFF;
 }
-
+.color-grey {
+	color: LightSteelBlue;
+}
 .navbar {
 	padding: 10px 15px;
 	background: #fff;
@@ -449,7 +451,7 @@ table.dataTable th:first-child{
 #switcher .theme-default {
 	width: 25px;
 	height: 25px;
-	background: #3CB371;
+	background: grey;
 	margin: 15px 10px;
 	position: absolute;
 	border-radius: 50%;
@@ -528,7 +530,7 @@ table.dataTable th:first-child{
 	width: 100px;
     height: 21px;
 	background: #fff;
-	color: #3CB371;
+	color: grey;
     margin: 0;
     position: absolute;
     left: 16px;
@@ -582,7 +584,7 @@ li.nav-item.active {
 	font-weight: 600;
 }
 .menu-nav .dropdown-menu a:nth-child(even) {
-	background-color: rgba(0,0,0,.02);
+	background-color: rgba(0,0,111,.02);
 }
 .menu-nav [class^="ti-"], .menu-nav [class*=" ti-"]{
 	color: rgba(255,255,255,.8);
@@ -757,6 +759,7 @@ li.nav-item.active {
 .navbar .nav .nav-item:last-child .nav-link{
 	padding-right: 7px;
 }
+
 .fullscreen {
 	padding: 10px;
     font-size: 17px;
@@ -852,6 +855,7 @@ h3.block-title {
 h4.wiget-title {
 	font-size: 13px;
 	letter-spacing: .5px;
+	color: LightSteelBlue;
 }
 
 .alert {
@@ -872,7 +876,7 @@ h4.wiget-title {
 	font-size: 12px;
 }
 .inc-dec .ti-angle-up{
-	color: green;
+	color: darkgray;
 }
 .inc-dec .ti-angle-down{
 	color: red;
@@ -909,6 +913,7 @@ h4.wiget-title {
     padding-bottom: .5rem;
     margin-bottom: 15px;
     border-bottom: 1px solid #eeeeee;
+	color: darkgrey;
 }
 
 .widget-morris {
